<resources>
    <string name="app_name">Tracer Study</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk atau daftar</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">"Selamat datang !"</string>
    <string name="invalid_username">Email tidak valid</string>
    <string name="login_failed">Gagal masuk</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_login">Masuk</string>
    <string name="prompt_alert_required">Tidak boleh kosong</string>
    <string name="sign_up_failed">Gagal membuat akun</string>
    <string name="invalid_username_password">Email atau password salah</string>
    <string name="prompt_logout">Keluar</string>
    <string name="prompt_study_data">Data Alumni</string>
    <string name="prompt_quiz_study">Kuesioner Alumni</string>
    <string name="prompt_quiz_stakeholder">Kuesioner Stakeholder</string>
    <string name="prompt_quiz">Kuesioner</string>

    <string-array name="list_quiz_alumni_subtitle">
        <item>A. Data Pribadi</item>
        <item>B. Riwayat Pendidikan</item>
        <item>C. Riwayat Pekerjaan</item>
        <item>D. Relevansi Pendidikan dengan Pekerjaan</item>
        <item>E. Pengalaman Pembelajaran dan Masukan bagi Pendidikan di POLTEKBANG JAYAPURA</item>
        <item>F. Indikator Kompetensi dan Daya Saing</item>
    </string-array>
    <string-array name="list_quiz_stakeholder_subtitle">
        <item>A. Karakteristik Perusahaan/Instansi</item>
        <item>B. Kriteria dan Prosedur Penerimaan Tenaga Kerja</item>
        <item>C. Kinerja Alumni Politeknik Penerbangan Jayapura</item>
        <item>D. Prospek Masa Mendatang</item>
    </string-array>
    <string-array name="list_when_looking">
        <item>Kira-kira 1 bulan sebelum lulus</item>
        <item>Kira-kira 1 bulan sesudah lulus</item>
        <item>Kira-kira 2 bulan sesudah lulus</item>
        <item>Kira-kira 3 bulan sesudah lulus</item>
        <item>Kira-kira 4 bulan sesudah lulus</item>
        <item>Kira-kira 5 bulan sesudah lulus</item>
        <item>Kira-kira 6 bulan sesudah lulus</item>
        <item>Kira-kira 7 bulan sesudah lulus</item>
        <item>Kira-kira 8 bulan sesudah lulus</item>
        <item>Kira-kira 9 bulan sesudah lulus</item>
        <item>Kira-kira 10 bulan sesudah lulus</item>
        <item>Kira-kira 11 bulan sesudah lulus</item>
        <item>Kira-kira 12 bulan sesudah lulus</item>
        <item>Kira-kira lebih dari setahun sesudah lulus</item>
        <item>Saya tidak mencari kerja</item>
    </string-array>
    <string-array name="list_month_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="list_month_number_null">
        <item>-</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="list_school_level">
        <item>D4</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <string-array name="existing_condition">
        <item>Sangat Tidak Baik</item>
        <item>Tidak Baik</item>
        <item>Netral</item>
        <item>Baik</item>
        <item>Sangat Baik</item>
    </string-array>
    <string-array name="desirable_condition">
        <item>Sangat Tidak Penting</item>
        <item>Tidak Penting</item>
        <item>Netral</item>
        <item>Penting</item>
        <item>Sangat Penting</item>
    </string-array>
    <string-array name="list_major">
        <item>-</item>
        <item>D-II AMPO (Aerodrome Multi Purpose Officer)</item>
        <item>D-II TNU (Teknik Telekomunikasi dan Navigasi Udara)</item>
        <item>D-II TEKPEN (Teknik Penerbangan)</item>
        <item>D-II ATC (Air Traffic Controller)</item>
        <item>D-II PLLU (Pemanduan Lalu Lintas Udara)</item>
        <item>D-II KP (Komunikasi Penerbangan)</item>
        <item>D-III MLLU (Manajemen Lalu Lintas Udara)</item>
        <item>D-III MBU (Manajemen Bandar Udara)</item>
        <item>D-III TLBU (teknik Listrik Bandar Udara)</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_save_continue">Simpan dan Lanjutkan</string>
    <string name="prompt_not_important">Tidak Penting</string>
    <string name="prompt_less_important">Kurang Penting</string>
    <string name="prompt_important">Penting</string>
    <string name="prompt_very_important">Sangat Penting</string>
    <string name="prompt_yes">Iya</string>
    <string name="prompt_no">Tidak</string>
    <string name="prompt_other">Lainnya</string>
    <string name="prompt_very_capable">Sangat Mampu</string>
    <string name="prompt_less_capable">Kurang Mampu</string>
    <string name="prompt_not_capable">Tidak Mampu</string>
    <string name="prompt_capable">Mampu</string>
    <string name="prompt_advice">Saran</string>
    <string name="prompt_reason">Alasan</string>
    <string name="prompt_competence">Kompetensi</string>
    <string name="prompt_very_satisfied">Sangat Puas</string>
    <string name="prompt_satisfied">Puas</string>
    <string name="prompt_satisfied_enough">Cukup Puas</string>
    <string name="prompt_less_satisfied">Kurang Puas</string>
    <string name="prompt_not_satisfied">Tidak Puas</string>
    <string name="prompt_very_not_satisfied">Sangat Tidak Puas</string>
    <string name="prompt_very_high">Sangat Tinggi</string>
    <string name="prompt_high">Tinggi</string>
    <string name="prompt_low">Rendah</string>
    <string name="prompt_very_low">Sangat Rendah</string>
    <string name="rp_1_000_000"><![CDATA[< Rp. 1.000.000]]></string>
    <string name="rp_1_000_000_rp_3_000_000"><![CDATA[> Rp. 1.000.000 - Rp. 3.000.000]]></string>
    <string name="rp_3_000_000_rp_5_000_000"><![CDATA[> Rp. 3.000.000 - Rp. 5.000.000]]></string>
    <string name="rp_5_000_000_rp_7_500_000"><![CDATA[> Rp. 5.000.000 - Rp. 7.500.000]]></string>
    <string name="rp_7_500_000_rp_10_000_000"><![CDATA[> Rp. 7.500.000 - Rp. 10.000.000]]></string>
    <string name="rp_10_000_000_rp_12_500_000"><![CDATA[> Rp. 10.000.000 - Rp. 12.500.000]]></string>
    <string name="rp_12_500_000_rp_15_000_000"><![CDATA[> Rp. 12.500.000 - Rp. 15.000.000]]></string>
    <string name="rp_15_000_000"><![CDATA[> Rp. 15.000.000]]></string>
    <string name="_3_bulan"><![CDATA[< 3 Bulan]]></string>
    <string name="_6_bulan"><![CDATA[< 6 Bulan]]></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="prompt_existing_condition">Kondisi Existing</string>
    <string name="prompt_suitable_condition">Kondisi Diinginkan</string>
    <string name="prompt_assessement_instructions">Petunjuk Penilaian</string>
    <string name="good_level_very_low">Sangat Tidak Baik</string>
    <string name="good_level_low">Tidak Baik</string>
    <string name="neutral">Netral</string>
    <string name="good_level_high">Baik</string>
    <string name="good_level_very_high">Sangat Baik</string>
    <string name="important_level_very_low">Sangat Tidak Penting</string>
    <string name="important_level_low">Tidak Penting</string>
    <string name="important_level_high">Penting</string>
    <string name="important_level_very_high">Sangat Penting</string>
    <string name="prompt_very_good">Sangat Bagus</string>
    <string name="prompt_good">Bagus</string>
    <string name="prompt_enough_good">Cukup Bagus</string>
    <string name="prompt_bad">Tidak Bagus</string>
    <string name="prompt_very_bad">Sangat Tidak Bagus</string>
    <string name="major_one">D-II AMPO (Aerodrome Multi Purpose Officer)</string>
    <string name="major_two">D-II TNU (Teknik Telekomunikasi dan Navigasi Udara)</string>
    <string name="major_three">D-II TEKPEN (Teknik Penerbangan)</string>
    <string name="major_four">D-II ATC (Air Traffic Controller)</string>
    <string name="major_five">D-II PLLU (Pemanduan Lalu Lintas Udara)</string>
    <string name="major_six">D-II KP (Komunikasi Penerbangan)</string>
    <string name="major_seven">D-III MLLU (Manajemen Lalu Lintas Udara)</string>
    <string name="major_eight">D-III MBU (Manajemen Bandar Udara)</string>
    <string name="major_nine">D-III TLBU (teknik Listrik Bandar Udara)</string>
    <string name="prompt_save">Simpan</string>
    <string name="picture">Picture</string>
    <string name="prompt_province">Provinsi</string>
    <string name="prompt_colon">:</string>
    <string name="dummy_province">Sulawesi Selatan</string>
    <string name="prompt_city">Kota</string>
    <string name="prompt_postal_code">Kode Pos</string>
    <string name="dummy_city">Kota Makasasr</string>
    <string name="dummy_postal_code">90221</string>
    <string name="dash">-</string>
    <string name="prompt_name">Nama</string>
</resources>
