<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBackground">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/colorDarkForeground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="64dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="@color/colorGrey"
                    android:textColor="@color/colorWhite"
                    android:layout_centerHorizontal="true">

                    <EditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textWebEmailAddress"
                        android:textColor="@color/colorWhite"
                        android:lines="1"
                        app:autoSizeTextType="uniform"
                        android:maxLength="32"
                        android:selectAllOnFocus="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/layout_login_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:textColorHint="@color/colorGrey"
                    android:textColor="@color/colorWhite"
                    android:layout_centerHorizontal="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhite">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionDone"
                        android:textColor="@color/colorWhite"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        app:backgroundTint="@color/colorWhite"
                        tools:ignore="Autofill" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:layout_below="@id/layout_login_password"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <include
        android:id="@+id/login_loading"
        layout="@layout/loading_screen"
        android:visibility="gone"
        />

</android.support.design.widget.CoordinatorLayout>